ontol/ontol-compiler/test-cases/error/fundamentals/package_not_found.on
use
'pkg' // ERROR package not found
as foo
